Compiler/Phase3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    Illegal_Lexeme

Grammar

Rule 0     S' -> start
Rule 1     start -> PROGRAM_KW IDENTIFIER SEMICOLON decList funcList block
Rule 2     decList -> decs
Rule 3     decList -> decs decList
Rule 4     decs -> type varList SEMICOLON
Rule 5     decs -> empty
Rule 6     type -> INTEGER_KW
Rule 7     type -> REAL_KW
Rule 8     type -> BOOLEAN_KW
Rule 9     varList -> IDENTIFIER
Rule 10    varList -> varList COMMA IDENTIFIER
Rule 11    funcList -> funcList funcDec
Rule 12    funcList -> empty
Rule 13    funcDec -> FUNCTION_KW IDENTIFIER parameters COLON type decList block
Rule 14    parameters -> LEFT_PA decList RIGHT_PA
Rule 15    block -> BEGIN_KW stmtList END_KW
Rule 16    stmtList -> stmt
Rule 17    stmtList -> stmtList stmt
Rule 18    stmt -> IDENTIFIER ASSIGN_OP expr SEMICOLON
Rule 19    stmt -> IF_KW expr THEN_KW stmt
Rule 20    stmt -> IF_KW expr THEN_KW stmt ELSE_KW stmt
Rule 21    stmt -> WHILE_KW expr DO_KW stmt
Rule 22    stmt -> FOR_KW IDENTIFIER ASSIGN_OP expr TO_KW expr DO_KW stmt
Rule 23    stmt -> RETURN_KW expr SEMICOLON
Rule 24    stmt -> block
Rule 25    expr -> expr AND_KW expr
Rule 26    expr -> expr OR_KW expr
Rule 27    expr -> expr MUL_OP expr
Rule 28    expr -> expr DIV_OP expr
Rule 29    expr -> expr ADD_OP expr
Rule 30    expr -> expr SUB_OP expr
Rule 31    expr -> expr relop expr
Rule 32    expr -> LEFT_PA expr RIGHT_PA
Rule 33    expr -> INTEGER_NUMBER
Rule 34    expr -> REAL_NUMBER
Rule 35    expr -> TRUE_KW
Rule 36    expr -> FALSE_KW
Rule 37    expr -> IDENTIFIER LEFT_PA actualparamlist RIGHT_PA
Rule 38    expr -> IDENTIFIER
Rule 39    actualparamlist -> expr
Rule 40    actualparamlist -> actualparamlist COMMA expr
Rule 41    actualparamlist -> IDENTIFIER
Rule 42    actualparamlist -> empty
Rule 43    relop -> LT_OP
Rule 44    relop -> LE_OP
Rule 45    relop -> EQ_OP
Rule 46    relop -> NE_OP
Rule 47    relop -> GE_OP
Rule 48    relop -> GT_OP
Rule 49    empty -> <empty>

Terminals, with rules where they appear

ADD_OP               : 29
AND_KW               : 25
ASSIGN_OP            : 18 22
BEGIN_KW             : 15
BOOLEAN_KW           : 8
COLON                : 13
COMMA                : 10 40
DIV_OP               : 28
DO_KW                : 21 22
ELSE_KW              : 20
END_KW               : 15
EQ_OP                : 45
FALSE_KW             : 36
FOR_KW               : 22
FUNCTION_KW          : 13
GE_OP                : 47
GT_OP                : 48
IDENTIFIER           : 1 9 10 13 18 22 37 38 41
IF_KW                : 19 20
INTEGER_KW           : 6
INTEGER_NUMBER       : 33
Illegal_Lexeme       : 
LEFT_PA              : 14 32 37
LE_OP                : 44
LT_OP                : 43
MUL_OP               : 27
NE_OP                : 46
OR_KW                : 26
PROGRAM_KW           : 1
REAL_KW              : 7
REAL_NUMBER          : 34
RETURN_KW            : 23
RIGHT_PA             : 14 32 37
SEMICOLON            : 1 4 18 23
SUB_OP               : 30
THEN_KW              : 19 20
TO_KW                : 22
TRUE_KW              : 35
WHILE_KW             : 21
error                : 

Nonterminals, with rules where they appear

actualparamlist      : 37 40
block                : 1 13 24
decList              : 1 3 13 14
decs                 : 2 3
empty                : 5 12 42
expr                 : 18 19 20 21 22 22 23 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 39 40
funcDec              : 11
funcList             : 1 11
parameters           : 13
relop                : 31
start                : 0
stmt                 : 16 17 19 20 20 21 22
stmtList             : 15 17
type                 : 4 13
varList              : 4 10

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . PROGRAM_KW IDENTIFIER SEMICOLON decList funcList block

    PROGRAM_KW      shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> PROGRAM_KW . IDENTIFIER SEMICOLON decList funcList block

    IDENTIFIER      shift and go to state 3


state 3

    (1) start -> PROGRAM_KW IDENTIFIER . SEMICOLON decList funcList block

    SEMICOLON       shift and go to state 4


state 4

    (1) start -> PROGRAM_KW IDENTIFIER SEMICOLON . decList funcList block
    (2) decList -> . decs
    (3) decList -> . decs decList
    (4) decs -> . type varList SEMICOLON
    (5) decs -> . empty
    (6) type -> . INTEGER_KW
    (7) type -> . REAL_KW
    (8) type -> . BOOLEAN_KW
    (49) empty -> .

  ! shift/reduce conflict for INTEGER_KW resolved as shift
  ! shift/reduce conflict for REAL_KW resolved as shift
  ! shift/reduce conflict for BOOLEAN_KW resolved as shift
    INTEGER_KW      shift and go to state 9
    REAL_KW         shift and go to state 10
    BOOLEAN_KW      shift and go to state 11
    BEGIN_KW        reduce using rule 49 (empty -> .)
    FUNCTION_KW     reduce using rule 49 (empty -> .)

  ! INTEGER_KW      [ reduce using rule 49 (empty -> .) ]
  ! REAL_KW         [ reduce using rule 49 (empty -> .) ]
  ! BOOLEAN_KW      [ reduce using rule 49 (empty -> .) ]

    decList                        shift and go to state 5
    decs                           shift and go to state 6
    type                           shift and go to state 7
    empty                          shift and go to state 8

state 5

    (1) start -> PROGRAM_KW IDENTIFIER SEMICOLON decList . funcList block
    (11) funcList -> . funcList funcDec
    (12) funcList -> . empty
    (49) empty -> .

    BEGIN_KW        reduce using rule 49 (empty -> .)
    FUNCTION_KW     reduce using rule 49 (empty -> .)

    funcList                       shift and go to state 12
    empty                          shift and go to state 13

state 6

    (2) decList -> decs .
    (3) decList -> decs . decList
    (2) decList -> . decs
    (3) decList -> . decs decList
    (4) decs -> . type varList SEMICOLON
    (5) decs -> . empty
    (6) type -> . INTEGER_KW
    (7) type -> . REAL_KW
    (8) type -> . BOOLEAN_KW
    (49) empty -> .

  ! shift/reduce conflict for INTEGER_KW resolved as shift
  ! shift/reduce conflict for REAL_KW resolved as shift
  ! shift/reduce conflict for BOOLEAN_KW resolved as shift
  ! reduce/reduce conflict for BEGIN_KW resolved using rule 2 (decList -> decs .)
  ! reduce/reduce conflict for FUNCTION_KW resolved using rule 2 (decList -> decs .)
  ! reduce/reduce conflict for RIGHT_PA resolved using rule 2 (decList -> decs .)
    BEGIN_KW        reduce using rule 2 (decList -> decs .)
    FUNCTION_KW     reduce using rule 2 (decList -> decs .)
    RIGHT_PA        reduce using rule 2 (decList -> decs .)
    INTEGER_KW      shift and go to state 9
    REAL_KW         shift and go to state 10
    BOOLEAN_KW      shift and go to state 11

  ! INTEGER_KW      [ reduce using rule 49 (empty -> .) ]
  ! REAL_KW         [ reduce using rule 49 (empty -> .) ]
  ! BOOLEAN_KW      [ reduce using rule 49 (empty -> .) ]
  ! BEGIN_KW        [ reduce using rule 49 (empty -> .) ]
  ! FUNCTION_KW     [ reduce using rule 49 (empty -> .) ]
  ! RIGHT_PA        [ reduce using rule 49 (empty -> .) ]

    decs                           shift and go to state 6
    decList                        shift and go to state 14
    type                           shift and go to state 7
    empty                          shift and go to state 8

state 7

    (4) decs -> type . varList SEMICOLON
    (9) varList -> . IDENTIFIER
    (10) varList -> . varList COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 16

    varList                        shift and go to state 15

state 8

    (5) decs -> empty .

    INTEGER_KW      reduce using rule 5 (decs -> empty .)
    REAL_KW         reduce using rule 5 (decs -> empty .)
    BOOLEAN_KW      reduce using rule 5 (decs -> empty .)
    BEGIN_KW        reduce using rule 5 (decs -> empty .)
    FUNCTION_KW     reduce using rule 5 (decs -> empty .)
    RIGHT_PA        reduce using rule 5 (decs -> empty .)


state 9

    (6) type -> INTEGER_KW .

    IDENTIFIER      reduce using rule 6 (type -> INTEGER_KW .)
    INTEGER_KW      reduce using rule 6 (type -> INTEGER_KW .)
    REAL_KW         reduce using rule 6 (type -> INTEGER_KW .)
    BOOLEAN_KW      reduce using rule 6 (type -> INTEGER_KW .)
    BEGIN_KW        reduce using rule 6 (type -> INTEGER_KW .)


state 10

    (7) type -> REAL_KW .

    IDENTIFIER      reduce using rule 7 (type -> REAL_KW .)
    INTEGER_KW      reduce using rule 7 (type -> REAL_KW .)
    REAL_KW         reduce using rule 7 (type -> REAL_KW .)
    BOOLEAN_KW      reduce using rule 7 (type -> REAL_KW .)
    BEGIN_KW        reduce using rule 7 (type -> REAL_KW .)


state 11

    (8) type -> BOOLEAN_KW .

    IDENTIFIER      reduce using rule 8 (type -> BOOLEAN_KW .)
    INTEGER_KW      reduce using rule 8 (type -> BOOLEAN_KW .)
    REAL_KW         reduce using rule 8 (type -> BOOLEAN_KW .)
    BOOLEAN_KW      reduce using rule 8 (type -> BOOLEAN_KW .)
    BEGIN_KW        reduce using rule 8 (type -> BOOLEAN_KW .)


state 12

    (1) start -> PROGRAM_KW IDENTIFIER SEMICOLON decList funcList . block
    (11) funcList -> funcList . funcDec
    (15) block -> . BEGIN_KW stmtList END_KW
    (13) funcDec -> . FUNCTION_KW IDENTIFIER parameters COLON type decList block

    BEGIN_KW        shift and go to state 19
    FUNCTION_KW     shift and go to state 20

    block                          shift and go to state 17
    funcDec                        shift and go to state 18

state 13

    (12) funcList -> empty .

    BEGIN_KW        reduce using rule 12 (funcList -> empty .)
    FUNCTION_KW     reduce using rule 12 (funcList -> empty .)


state 14

    (3) decList -> decs decList .

    BEGIN_KW        reduce using rule 3 (decList -> decs decList .)
    FUNCTION_KW     reduce using rule 3 (decList -> decs decList .)
    RIGHT_PA        reduce using rule 3 (decList -> decs decList .)


state 15

    (4) decs -> type varList . SEMICOLON
    (10) varList -> varList . COMMA IDENTIFIER

    SEMICOLON       shift and go to state 21
    COMMA           shift and go to state 22


state 16

    (9) varList -> IDENTIFIER .

    SEMICOLON       reduce using rule 9 (varList -> IDENTIFIER .)
    COMMA           reduce using rule 9 (varList -> IDENTIFIER .)


state 17

    (1) start -> PROGRAM_KW IDENTIFIER SEMICOLON decList funcList block .

    $end            reduce using rule 1 (start -> PROGRAM_KW IDENTIFIER SEMICOLON decList funcList block .)


state 18

    (11) funcList -> funcList funcDec .

    BEGIN_KW        reduce using rule 11 (funcList -> funcList funcDec .)
    FUNCTION_KW     reduce using rule 11 (funcList -> funcList funcDec .)


state 19

    (15) block -> BEGIN_KW . stmtList END_KW
    (16) stmtList -> . stmt
    (17) stmtList -> . stmtList stmt
    (18) stmt -> . IDENTIFIER ASSIGN_OP expr SEMICOLON
    (19) stmt -> . IF_KW expr THEN_KW stmt
    (20) stmt -> . IF_KW expr THEN_KW stmt ELSE_KW stmt
    (21) stmt -> . WHILE_KW expr DO_KW stmt
    (22) stmt -> . FOR_KW IDENTIFIER ASSIGN_OP expr TO_KW expr DO_KW stmt
    (23) stmt -> . RETURN_KW expr SEMICOLON
    (24) stmt -> . block
    (15) block -> . BEGIN_KW stmtList END_KW

    IDENTIFIER      shift and go to state 25
    IF_KW           shift and go to state 26
    WHILE_KW        shift and go to state 27
    FOR_KW          shift and go to state 28
    RETURN_KW       shift and go to state 29
    BEGIN_KW        shift and go to state 19

    stmtList                       shift and go to state 23
    stmt                           shift and go to state 24
    block                          shift and go to state 30

state 20

    (13) funcDec -> FUNCTION_KW . IDENTIFIER parameters COLON type decList block

    IDENTIFIER      shift and go to state 31


state 21

    (4) decs -> type varList SEMICOLON .

    INTEGER_KW      reduce using rule 4 (decs -> type varList SEMICOLON .)
    REAL_KW         reduce using rule 4 (decs -> type varList SEMICOLON .)
    BOOLEAN_KW      reduce using rule 4 (decs -> type varList SEMICOLON .)
    BEGIN_KW        reduce using rule 4 (decs -> type varList SEMICOLON .)
    FUNCTION_KW     reduce using rule 4 (decs -> type varList SEMICOLON .)
    RIGHT_PA        reduce using rule 4 (decs -> type varList SEMICOLON .)


state 22

    (10) varList -> varList COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 32


state 23

    (15) block -> BEGIN_KW stmtList . END_KW
    (17) stmtList -> stmtList . stmt
    (18) stmt -> . IDENTIFIER ASSIGN_OP expr SEMICOLON
    (19) stmt -> . IF_KW expr THEN_KW stmt
    (20) stmt -> . IF_KW expr THEN_KW stmt ELSE_KW stmt
    (21) stmt -> . WHILE_KW expr DO_KW stmt
    (22) stmt -> . FOR_KW IDENTIFIER ASSIGN_OP expr TO_KW expr DO_KW stmt
    (23) stmt -> . RETURN_KW expr SEMICOLON
    (24) stmt -> . block
    (15) block -> . BEGIN_KW stmtList END_KW

    END_KW          shift and go to state 33
    IDENTIFIER      shift and go to state 25
    IF_KW           shift and go to state 26
    WHILE_KW        shift and go to state 27
    FOR_KW          shift and go to state 28
    RETURN_KW       shift and go to state 29
    BEGIN_KW        shift and go to state 19

    stmt                           shift and go to state 34
    block                          shift and go to state 30

state 24

    (16) stmtList -> stmt .

    END_KW          reduce using rule 16 (stmtList -> stmt .)
    IDENTIFIER      reduce using rule 16 (stmtList -> stmt .)
    IF_KW           reduce using rule 16 (stmtList -> stmt .)
    WHILE_KW        reduce using rule 16 (stmtList -> stmt .)
    FOR_KW          reduce using rule 16 (stmtList -> stmt .)
    RETURN_KW       reduce using rule 16 (stmtList -> stmt .)
    BEGIN_KW        reduce using rule 16 (stmtList -> stmt .)


state 25

    (18) stmt -> IDENTIFIER . ASSIGN_OP expr SEMICOLON

    ASSIGN_OP       shift and go to state 35


state 26

    (19) stmt -> IF_KW . expr THEN_KW stmt
    (20) stmt -> IF_KW . expr THEN_KW stmt ELSE_KW stmt
    (25) expr -> . expr AND_KW expr
    (26) expr -> . expr OR_KW expr
    (27) expr -> . expr MUL_OP expr
    (28) expr -> . expr DIV_OP expr
    (29) expr -> . expr ADD_OP expr
    (30) expr -> . expr SUB_OP expr
    (31) expr -> . expr relop expr
    (32) expr -> . LEFT_PA expr RIGHT_PA
    (33) expr -> . INTEGER_NUMBER
    (34) expr -> . REAL_NUMBER
    (35) expr -> . TRUE_KW
    (36) expr -> . FALSE_KW
    (37) expr -> . IDENTIFIER LEFT_PA actualparamlist RIGHT_PA
    (38) expr -> . IDENTIFIER

    LEFT_PA         shift and go to state 37
    INTEGER_NUMBER  shift and go to state 38
    REAL_NUMBER     shift and go to state 39
    TRUE_KW         shift and go to state 40
    FALSE_KW        shift and go to state 41
    IDENTIFIER      shift and go to state 42

    expr                           shift and go to state 36

state 27

    (21) stmt -> WHILE_KW . expr DO_KW stmt
    (25) expr -> . expr AND_KW expr
    (26) expr -> . expr OR_KW expr
    (27) expr -> . expr MUL_OP expr
    (28) expr -> . expr DIV_OP expr
    (29) expr -> . expr ADD_OP expr
    (30) expr -> . expr SUB_OP expr
    (31) expr -> . expr relop expr
    (32) expr -> . LEFT_PA expr RIGHT_PA
    (33) expr -> . INTEGER_NUMBER
    (34) expr -> . REAL_NUMBER
    (35) expr -> . TRUE_KW
    (36) expr -> . FALSE_KW
    (37) expr -> . IDENTIFIER LEFT_PA actualparamlist RIGHT_PA
    (38) expr -> . IDENTIFIER

    LEFT_PA         shift and go to state 37
    INTEGER_NUMBER  shift and go to state 38
    REAL_NUMBER     shift and go to state 39
    TRUE_KW         shift and go to state 40
    FALSE_KW        shift and go to state 41
    IDENTIFIER      shift and go to state 42

    expr                           shift and go to state 43

state 28

    (22) stmt -> FOR_KW . IDENTIFIER ASSIGN_OP expr TO_KW expr DO_KW stmt

    IDENTIFIER      shift and go to state 44


state 29

    (23) stmt -> RETURN_KW . expr SEMICOLON
    (25) expr -> . expr AND_KW expr
    (26) expr -> . expr OR_KW expr
    (27) expr -> . expr MUL_OP expr
    (28) expr -> . expr DIV_OP expr
    (29) expr -> . expr ADD_OP expr
    (30) expr -> . expr SUB_OP expr
    (31) expr -> . expr relop expr
    (32) expr -> . LEFT_PA expr RIGHT_PA
    (33) expr -> . INTEGER_NUMBER
    (34) expr -> . REAL_NUMBER
    (35) expr -> . TRUE_KW
    (36) expr -> . FALSE_KW
    (37) expr -> . IDENTIFIER LEFT_PA actualparamlist RIGHT_PA
    (38) expr -> . IDENTIFIER

    LEFT_PA         shift and go to state 37
    INTEGER_NUMBER  shift and go to state 38
    REAL_NUMBER     shift and go to state 39
    TRUE_KW         shift and go to state 40
    FALSE_KW        shift and go to state 41
    IDENTIFIER      shift and go to state 42

    expr                           shift and go to state 45

state 30

    (24) stmt -> block .

    END_KW          reduce using rule 24 (stmt -> block .)
    IDENTIFIER      reduce using rule 24 (stmt -> block .)
    IF_KW           reduce using rule 24 (stmt -> block .)
    WHILE_KW        reduce using rule 24 (stmt -> block .)
    FOR_KW          reduce using rule 24 (stmt -> block .)
    RETURN_KW       reduce using rule 24 (stmt -> block .)
    BEGIN_KW        reduce using rule 24 (stmt -> block .)
    ELSE_KW         reduce using rule 24 (stmt -> block .)


state 31

    (13) funcDec -> FUNCTION_KW IDENTIFIER . parameters COLON type decList block
    (14) parameters -> . LEFT_PA decList RIGHT_PA

    LEFT_PA         shift and go to state 47

    parameters                     shift and go to state 46

state 32

    (10) varList -> varList COMMA IDENTIFIER .

    SEMICOLON       reduce using rule 10 (varList -> varList COMMA IDENTIFIER .)
    COMMA           reduce using rule 10 (varList -> varList COMMA IDENTIFIER .)


state 33

    (15) block -> BEGIN_KW stmtList END_KW .

    $end            reduce using rule 15 (block -> BEGIN_KW stmtList END_KW .)
    END_KW          reduce using rule 15 (block -> BEGIN_KW stmtList END_KW .)
    IDENTIFIER      reduce using rule 15 (block -> BEGIN_KW stmtList END_KW .)
    IF_KW           reduce using rule 15 (block -> BEGIN_KW stmtList END_KW .)
    WHILE_KW        reduce using rule 15 (block -> BEGIN_KW stmtList END_KW .)
    FOR_KW          reduce using rule 15 (block -> BEGIN_KW stmtList END_KW .)
    RETURN_KW       reduce using rule 15 (block -> BEGIN_KW stmtList END_KW .)
    BEGIN_KW        reduce using rule 15 (block -> BEGIN_KW stmtList END_KW .)
    ELSE_KW         reduce using rule 15 (block -> BEGIN_KW stmtList END_KW .)
    FUNCTION_KW     reduce using rule 15 (block -> BEGIN_KW stmtList END_KW .)


state 34

    (17) stmtList -> stmtList stmt .

    END_KW          reduce using rule 17 (stmtList -> stmtList stmt .)
    IDENTIFIER      reduce using rule 17 (stmtList -> stmtList stmt .)
    IF_KW           reduce using rule 17 (stmtList -> stmtList stmt .)
    WHILE_KW        reduce using rule 17 (stmtList -> stmtList stmt .)
    FOR_KW          reduce using rule 17 (stmtList -> stmtList stmt .)
    RETURN_KW       reduce using rule 17 (stmtList -> stmtList stmt .)
    BEGIN_KW        reduce using rule 17 (stmtList -> stmtList stmt .)


state 35

    (18) stmt -> IDENTIFIER ASSIGN_OP . expr SEMICOLON
    (25) expr -> . expr AND_KW expr
    (26) expr -> . expr OR_KW expr
    (27) expr -> . expr MUL_OP expr
    (28) expr -> . expr DIV_OP expr
    (29) expr -> . expr ADD_OP expr
    (30) expr -> . expr SUB_OP expr
    (31) expr -> . expr relop expr
    (32) expr -> . LEFT_PA expr RIGHT_PA
    (33) expr -> . INTEGER_NUMBER
    (34) expr -> . REAL_NUMBER
    (35) expr -> . TRUE_KW
    (36) expr -> . FALSE_KW
    (37) expr -> . IDENTIFIER LEFT_PA actualparamlist RIGHT_PA
    (38) expr -> . IDENTIFIER

    LEFT_PA         shift and go to state 37
    INTEGER_NUMBER  shift and go to state 38
    REAL_NUMBER     shift and go to state 39
    TRUE_KW         shift and go to state 40
    FALSE_KW        shift and go to state 41
    IDENTIFIER      shift and go to state 42

    expr                           shift and go to state 48

state 36

    (19) stmt -> IF_KW expr . THEN_KW stmt
    (20) stmt -> IF_KW expr . THEN_KW stmt ELSE_KW stmt
    (25) expr -> expr . AND_KW expr
    (26) expr -> expr . OR_KW expr
    (27) expr -> expr . MUL_OP expr
    (28) expr -> expr . DIV_OP expr
    (29) expr -> expr . ADD_OP expr
    (30) expr -> expr . SUB_OP expr
    (31) expr -> expr . relop expr
    (43) relop -> . LT_OP
    (44) relop -> . LE_OP
    (45) relop -> . EQ_OP
    (46) relop -> . NE_OP
    (47) relop -> . GE_OP
    (48) relop -> . GT_OP

    THEN_KW         shift and go to state 49
    AND_KW          shift and go to state 50
    OR_KW           shift and go to state 51
    MUL_OP          shift and go to state 52
    DIV_OP          shift and go to state 53
    ADD_OP          shift and go to state 54
    SUB_OP          shift and go to state 55
    LT_OP           shift and go to state 57
    LE_OP           shift and go to state 58
    EQ_OP           shift and go to state 59
    NE_OP           shift and go to state 60
    GE_OP           shift and go to state 61
    GT_OP           shift and go to state 62

    relop                          shift and go to state 56

state 37

    (32) expr -> LEFT_PA . expr RIGHT_PA
    (25) expr -> . expr AND_KW expr
    (26) expr -> . expr OR_KW expr
    (27) expr -> . expr MUL_OP expr
    (28) expr -> . expr DIV_OP expr
    (29) expr -> . expr ADD_OP expr
    (30) expr -> . expr SUB_OP expr
    (31) expr -> . expr relop expr
    (32) expr -> . LEFT_PA expr RIGHT_PA
    (33) expr -> . INTEGER_NUMBER
    (34) expr -> . REAL_NUMBER
    (35) expr -> . TRUE_KW
    (36) expr -> . FALSE_KW
    (37) expr -> . IDENTIFIER LEFT_PA actualparamlist RIGHT_PA
    (38) expr -> . IDENTIFIER

    LEFT_PA         shift and go to state 37
    INTEGER_NUMBER  shift and go to state 38
    REAL_NUMBER     shift and go to state 39
    TRUE_KW         shift and go to state 40
    FALSE_KW        shift and go to state 41
    IDENTIFIER      shift and go to state 42

    expr                           shift and go to state 63

state 38

    (33) expr -> INTEGER_NUMBER .

    THEN_KW         reduce using rule 33 (expr -> INTEGER_NUMBER .)
    AND_KW          reduce using rule 33 (expr -> INTEGER_NUMBER .)
    OR_KW           reduce using rule 33 (expr -> INTEGER_NUMBER .)
    MUL_OP          reduce using rule 33 (expr -> INTEGER_NUMBER .)
    DIV_OP          reduce using rule 33 (expr -> INTEGER_NUMBER .)
    ADD_OP          reduce using rule 33 (expr -> INTEGER_NUMBER .)
    SUB_OP          reduce using rule 33 (expr -> INTEGER_NUMBER .)
    LT_OP           reduce using rule 33 (expr -> INTEGER_NUMBER .)
    LE_OP           reduce using rule 33 (expr -> INTEGER_NUMBER .)
    EQ_OP           reduce using rule 33 (expr -> INTEGER_NUMBER .)
    NE_OP           reduce using rule 33 (expr -> INTEGER_NUMBER .)
    GE_OP           reduce using rule 33 (expr -> INTEGER_NUMBER .)
    GT_OP           reduce using rule 33 (expr -> INTEGER_NUMBER .)
    DO_KW           reduce using rule 33 (expr -> INTEGER_NUMBER .)
    SEMICOLON       reduce using rule 33 (expr -> INTEGER_NUMBER .)
    RIGHT_PA        reduce using rule 33 (expr -> INTEGER_NUMBER .)
    COMMA           reduce using rule 33 (expr -> INTEGER_NUMBER .)
    TO_KW           reduce using rule 33 (expr -> INTEGER_NUMBER .)


state 39

    (34) expr -> REAL_NUMBER .

    THEN_KW         reduce using rule 34 (expr -> REAL_NUMBER .)
    AND_KW          reduce using rule 34 (expr -> REAL_NUMBER .)
    OR_KW           reduce using rule 34 (expr -> REAL_NUMBER .)
    MUL_OP          reduce using rule 34 (expr -> REAL_NUMBER .)
    DIV_OP          reduce using rule 34 (expr -> REAL_NUMBER .)
    ADD_OP          reduce using rule 34 (expr -> REAL_NUMBER .)
    SUB_OP          reduce using rule 34 (expr -> REAL_NUMBER .)
    LT_OP           reduce using rule 34 (expr -> REAL_NUMBER .)
    LE_OP           reduce using rule 34 (expr -> REAL_NUMBER .)
    EQ_OP           reduce using rule 34 (expr -> REAL_NUMBER .)
    NE_OP           reduce using rule 34 (expr -> REAL_NUMBER .)
    GE_OP           reduce using rule 34 (expr -> REAL_NUMBER .)
    GT_OP           reduce using rule 34 (expr -> REAL_NUMBER .)
    DO_KW           reduce using rule 34 (expr -> REAL_NUMBER .)
    SEMICOLON       reduce using rule 34 (expr -> REAL_NUMBER .)
    RIGHT_PA        reduce using rule 34 (expr -> REAL_NUMBER .)
    COMMA           reduce using rule 34 (expr -> REAL_NUMBER .)
    TO_KW           reduce using rule 34 (expr -> REAL_NUMBER .)


state 40

    (35) expr -> TRUE_KW .

    THEN_KW         reduce using rule 35 (expr -> TRUE_KW .)
    AND_KW          reduce using rule 35 (expr -> TRUE_KW .)
    OR_KW           reduce using rule 35 (expr -> TRUE_KW .)
    MUL_OP          reduce using rule 35 (expr -> TRUE_KW .)
    DIV_OP          reduce using rule 35 (expr -> TRUE_KW .)
    ADD_OP          reduce using rule 35 (expr -> TRUE_KW .)
    SUB_OP          reduce using rule 35 (expr -> TRUE_KW .)
    LT_OP           reduce using rule 35 (expr -> TRUE_KW .)
    LE_OP           reduce using rule 35 (expr -> TRUE_KW .)
    EQ_OP           reduce using rule 35 (expr -> TRUE_KW .)
    NE_OP           reduce using rule 35 (expr -> TRUE_KW .)
    GE_OP           reduce using rule 35 (expr -> TRUE_KW .)
    GT_OP           reduce using rule 35 (expr -> TRUE_KW .)
    DO_KW           reduce using rule 35 (expr -> TRUE_KW .)
    SEMICOLON       reduce using rule 35 (expr -> TRUE_KW .)
    RIGHT_PA        reduce using rule 35 (expr -> TRUE_KW .)
    COMMA           reduce using rule 35 (expr -> TRUE_KW .)
    TO_KW           reduce using rule 35 (expr -> TRUE_KW .)


state 41

    (36) expr -> FALSE_KW .

    THEN_KW         reduce using rule 36 (expr -> FALSE_KW .)
    AND_KW          reduce using rule 36 (expr -> FALSE_KW .)
    OR_KW           reduce using rule 36 (expr -> FALSE_KW .)
    MUL_OP          reduce using rule 36 (expr -> FALSE_KW .)
    DIV_OP          reduce using rule 36 (expr -> FALSE_KW .)
    ADD_OP          reduce using rule 36 (expr -> FALSE_KW .)
    SUB_OP          reduce using rule 36 (expr -> FALSE_KW .)
    LT_OP           reduce using rule 36 (expr -> FALSE_KW .)
    LE_OP           reduce using rule 36 (expr -> FALSE_KW .)
    EQ_OP           reduce using rule 36 (expr -> FALSE_KW .)
    NE_OP           reduce using rule 36 (expr -> FALSE_KW .)
    GE_OP           reduce using rule 36 (expr -> FALSE_KW .)
    GT_OP           reduce using rule 36 (expr -> FALSE_KW .)
    DO_KW           reduce using rule 36 (expr -> FALSE_KW .)
    SEMICOLON       reduce using rule 36 (expr -> FALSE_KW .)
    RIGHT_PA        reduce using rule 36 (expr -> FALSE_KW .)
    COMMA           reduce using rule 36 (expr -> FALSE_KW .)
    TO_KW           reduce using rule 36 (expr -> FALSE_KW .)


state 42

    (37) expr -> IDENTIFIER . LEFT_PA actualparamlist RIGHT_PA
    (38) expr -> IDENTIFIER .

    LEFT_PA         shift and go to state 64
    THEN_KW         reduce using rule 38 (expr -> IDENTIFIER .)
    AND_KW          reduce using rule 38 (expr -> IDENTIFIER .)
    OR_KW           reduce using rule 38 (expr -> IDENTIFIER .)
    MUL_OP          reduce using rule 38 (expr -> IDENTIFIER .)
    DIV_OP          reduce using rule 38 (expr -> IDENTIFIER .)
    ADD_OP          reduce using rule 38 (expr -> IDENTIFIER .)
    SUB_OP          reduce using rule 38 (expr -> IDENTIFIER .)
    LT_OP           reduce using rule 38 (expr -> IDENTIFIER .)
    LE_OP           reduce using rule 38 (expr -> IDENTIFIER .)
    EQ_OP           reduce using rule 38 (expr -> IDENTIFIER .)
    NE_OP           reduce using rule 38 (expr -> IDENTIFIER .)
    GE_OP           reduce using rule 38 (expr -> IDENTIFIER .)
    GT_OP           reduce using rule 38 (expr -> IDENTIFIER .)
    DO_KW           reduce using rule 38 (expr -> IDENTIFIER .)
    SEMICOLON       reduce using rule 38 (expr -> IDENTIFIER .)
    RIGHT_PA        reduce using rule 38 (expr -> IDENTIFIER .)
    COMMA           reduce using rule 38 (expr -> IDENTIFIER .)
    TO_KW           reduce using rule 38 (expr -> IDENTIFIER .)


state 43

    (21) stmt -> WHILE_KW expr . DO_KW stmt
    (25) expr -> expr . AND_KW expr
    (26) expr -> expr . OR_KW expr
    (27) expr -> expr . MUL_OP expr
    (28) expr -> expr . DIV_OP expr
    (29) expr -> expr . ADD_OP expr
    (30) expr -> expr . SUB_OP expr
    (31) expr -> expr . relop expr
    (43) relop -> . LT_OP
    (44) relop -> . LE_OP
    (45) relop -> . EQ_OP
    (46) relop -> . NE_OP
    (47) relop -> . GE_OP
    (48) relop -> . GT_OP

    DO_KW           shift and go to state 65
    AND_KW          shift and go to state 50
    OR_KW           shift and go to state 51
    MUL_OP          shift and go to state 52
    DIV_OP          shift and go to state 53
    ADD_OP          shift and go to state 54
    SUB_OP          shift and go to state 55
    LT_OP           shift and go to state 57
    LE_OP           shift and go to state 58
    EQ_OP           shift and go to state 59
    NE_OP           shift and go to state 60
    GE_OP           shift and go to state 61
    GT_OP           shift and go to state 62

    relop                          shift and go to state 56

state 44

    (22) stmt -> FOR_KW IDENTIFIER . ASSIGN_OP expr TO_KW expr DO_KW stmt

    ASSIGN_OP       shift and go to state 66


state 45

    (23) stmt -> RETURN_KW expr . SEMICOLON
    (25) expr -> expr . AND_KW expr
    (26) expr -> expr . OR_KW expr
    (27) expr -> expr . MUL_OP expr
    (28) expr -> expr . DIV_OP expr
    (29) expr -> expr . ADD_OP expr
    (30) expr -> expr . SUB_OP expr
    (31) expr -> expr . relop expr
    (43) relop -> . LT_OP
    (44) relop -> . LE_OP
    (45) relop -> . EQ_OP
    (46) relop -> . NE_OP
    (47) relop -> . GE_OP
    (48) relop -> . GT_OP
